--- a/src/piedra.css
+++ b/src/piedra.css
@@ -3,6 +3,8 @@ body{
   margin: 0;
   width: 100vw;
   height: 100vh;
+  display: flex;
+  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -51,5 +53,8 @@ body{
 
 .confe{
   position: fixed;
+  top: 0;
   z-index: -1;
+  width: 100%;
+  left: 0;
 }
